# prog2_hf

./: .gitignore  Arveres.cpp  Arveres.h  CMakeLists.txt  Targy.cpp  Targy.h  Vasarlo.cpp  Vasarlo.h  VasarloLista.cpp  VasarloLista.h  main.cpp  main_console.cpp  main_test.cpp  pontos_spec.md  readme.txt  specifikáció.md  terv.md
